Correct events bar search background color on small screens.
[TEC-4063]

:camera: https://d.pr/i/oTyzxf

--- a/src/resources/postcss/components/full/_events-bar.pcss
+++ b/src/resources/postcss/components/full/_events-bar.pcss
@@ -33,6 +33,10 @@
 		}
 	}
 
+	.tribe-events-c-events-bar__search-container {
+		background-color: var(--tec-color-background-events-bar);
+	}
+
 	.tribe-events-c-events-bar__search-button {
 		display: flex;
 
